# ArtGallery

./: .gitignore  CMakeCache.txt  CMakeLists.txt  README.md
.github/workflows/: build.yml
output/: test-bruteforce.txt  test-custom.txt  test-highvalue.txt
src/: driver.cpp  driver.h  gallery.cpp  gallery.h  main.cpp  picture.cpp  picture.h
test/: input-big.txt  input-small.txt  input.txt
